remove ws connect in html

--- a/htmx/index.html
+++ b/htmx/index.html
@@ -14,7 +14,7 @@
             <a href="/update" class="btn btn-success" role="button">Update</a>
 
 
-            <div hx-ext="ws" ws-connect="ws://127.0.0.1:8080/ws">
+            <div hx-ext="ws" ws-connect="ws://:8080/ws">
                 <table class="table">
                     <thead>
                     <tr>
