--- a/htmx/index.html
+++ b/htmx/index.html
@@ -12,6 +12,7 @@
 
             <a href="/add" class="btn btn-primary" role="button">Add New Crypto</a>
             <a href="/update" class="btn btn-success" role="button">Update</a>
+            <a href="/archive" class="btn btn-secondary" role="button">Archive</a>
 
 
             <div hx-ext="ws" ws-connect="ws://:8080/ws">
