added coin page, activate/deactivate

--- a/htmx/index.html
+++ b/htmx/index.html
@@ -9,6 +9,9 @@
             #red {
                 color: red;
             }
+            .table>:not(:last-child)>:last-child>* {
+                border-bottom-color: #e1e1e1 !important;
+            }
         </style>
     </head>
     <body>
@@ -25,6 +28,7 @@
 
             <a href="/add" class="btn btn-primary" role="button">Add New Crypto</a>
             <a href="/update" class="btn btn-success" role="button">Update</a>
+            <a href="/coins" class="btn btn-primary" role="button">Coins</a>
             <a href="/archive" class="btn btn-secondary" role="button">Archive</a>
 
 
