--- a/htmx/index.html
+++ b/htmx/index.html
@@ -20,19 +20,62 @@
                 <div class="row row-cols-auto">
                     <div class="col" style="padding-left: 0px;">
                         <a href="/" style="color: black; text-decoration: none; font-size: 45px;">Crypto Track</a>
-                        
                     </div>
-                    <div class="col" {{if .TimeAlert }}id="red"{{ end }} style="margin-top: auto;margin-bottom: auto;">{{ .LastUpdate }}</div>
                 </div>
             </div>
 
-            <a href="/add" class="btn btn-primary" role="button">Add New Crypto</a>
-            <a href="/update" class="btn btn-success" role="button">Update</a>
-            <a href="/coins" class="btn btn-primary" role="button">Coins</a>
-            <a href="/archive" class="btn btn-secondary" role="button">Archive</a>
-
+            <div class="container balanceOverall">
+                <div class="container">
+                    <div class="row row-cols-auto">
+                        <div class="col" style="padding-left: 0px;">
+                            <p style="color: black; text-decoration: none; font-size: 30px;">Overall Balance</p>
+                        </div>
+                        <div class="col" {{if .TimeAlertBalance }}id="red"{{ end }} style="margin-top: auto;margin-bottom: auto;">{{ .LastUpdateBalance }}</div>
+                    </div>
+                </div>
+                
+                <table class="table balanceOverallTable">
+                    <thead>
+                        <tr>
+                            <th scope="col">Exchange</th>
+                            <th scope="col">Balance</th>
+                            <th scope="col">Balance Hourly</th>
+                            <th scope="col">Balance Daily</th>
+                        </tr>
+                    </thead>
+                    {{ range .TableDataBalance }}
+                        <tbody>
+                            <tr>
+                                <th scope="row">{{ .ExchangeName }}</th>
+                                <td>{{ printf "%.2f" .BalanceUSDT }}</td>
+                                <td {{ if gt .BalanceUSDTHourlyDiff 0.0 }}class="table-success"{{ else }}class="table-primary"{{ end }}>
+                                    {{ printf "%.2f" .BalanceUSDTHourly }} | {{ printf "%.2f" .BalanceUSDTHourlyDiff }} {{ if gt .BalanceUSDTHourlyDiff 0.0 }}↑{{ else }}↓{{ end }}
+                                </td>
+                                <td {{ if gt .BalanceUSDTDailyDiff 0.0 }}class="table-success"{{ else }}class="table-primary"{{ end }}>
+                                    {{ printf "%.2f" .BalanceUSDTDaily }} | {{ printf "%.2f" .BalanceUSDTDailyDiff }} {{ if gt .BalanceUSDTDailyDiff 0.0 }}↑{{ else }}↓{{ end }}
+                                </td>
+                            </tr>
+                        </tbody>
+                    {{ end }}
+                </table>
+            </div>
 
             <div hx-ext="ws" ws-connect="ws://:8080/ws">
+
+                <div class="container">
+                    <div class="row row-cols-auto">
+                        <div class="col" style="padding-left: 0px;">
+                            <p style="color: black; text-decoration: none; font-size: 30px;">Investment in Coins</p>
+                        </div>
+                        <div class="col" {{if .TimeAlert }}id="red"{{ end }} style="margin-top: auto;margin-bottom: auto;">{{ .LastUpdate }}</div>
+                    </div>
+                </div>
+
+                <a href="/add" class="btn btn-primary" role="button">Add New Crypto</a>
+                <a href="/update" class="btn btn-success" role="button">Update</a>
+                <a href="/coins" class="btn btn-primary" role="button">Coins</a>
+                <a href="/archive" class="btn btn-secondary" role="button">Archive</a>
+
                 <table class="table">
                     <thead>
                         <tr>
