added futures sync for okx and bybit

--- a/htmx/index.html
+++ b/htmx/index.html
@@ -75,6 +75,8 @@
                 <a href="/update" class="btn btn-success" role="button">Update</a>
                 <a href="/coins" class="btn btn-primary" role="button">Coins</a>
                 <a href="/archive" class="btn btn-secondary" role="button">Archive</a>
+                <a href="/futures/2" class="btn btn-secondary" role="button">OKX Futures</a>
+                <a href="/futures/4" class="btn btn-secondary" role="button">Bybit Futures</a>
 
                 <table class="table">
                     <thead>
